<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="databasename">mknincomeexpense.sqlite3</string>
    <string name="app_name">InpenseExcomeOutsight</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="title_activity_addincome">Addincome</string>
    <string name="date">date</string>
    <string name="title_income">Income. Base account name: </string>
    <string name="title_expense">Expense. Base account name: </string>
    <string name="account_name">Account Name:</string>
    <string name="amount">Amount</string>
    <string name="title_activity_changebaseaccount">ChangebaseaccountActivity</string>
    <string name="base_account">Base Account:</string>
    <string name="change_base_account">Change base account</string>
    <string name="new_account">Create new base account</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="summary">Summary:</string>
    <string name="balance">Balance</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_transfer_income">Total Transfer Income</string>
    <string name="total_transfer_expense">Total Transfer Expense</string>
    <string name="title_activity_addexpense">Add Expense</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="title_activity_editexpense">Expenses</string>
    <string name="description">Description</string>
    <string name="title_activity_editincome">EditincomeActivity</string>
</resources>
