<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/account" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Accountname" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:id="@+id/bt_Addincome"
        android:layout_below="@+id/tv_Accountname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/bt_Addexpense"
        android:layout_alignEnd="@+id/bt_Addexpense"
        android:onClick="gotoAddincome"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:id="@+id/bt_Addexpense"
        android:layout_below="@+id/bt_Addincome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_base_account"
        android:id="@+id/bt_Changebaseaccount"
        android:layout_below="@+id/bt_Addexpense"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:onClick="gotoChangebaseaccount"/>

</RelativeLayout>
