<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="in.izzulmak.inpenseexcomeoutsight.ChangebaseaccountActivity">

    <TextView android:text="@string/base_account" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/bt_Cba_Baseaccount"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="#ffeeeeff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/bt_Cba_Save"
        android:layout_below="@+id/bt_Cba_Baseaccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="+"
        android:id="@+id/bt_Cba_Add"
        android:layout_centerInParent="true"
        android:onClick="showFrameAdd"
        />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/fr_Cba_Add"
        android:layout_below="@+id/bt_Cba_Add">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Cba_Add_Lbname"
            android:text="@string/account_name"
            android:layout_gravity="left|top"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_Cba_Add_Name"
            android:layout_below="@+id/tv_Cba_Add_Lbname"
            android:layout_marginTop="40dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/bt_Cba_Add_Create"
            android:layout_below="@+id/et_Cba_Add_Name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:onClick="dbCreateAccount"
            />
    </FrameLayout>

</RelativeLayout>
