<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="in.izzulmak.inpenseexcomeoutsight.AddincomeActivity">

    <TextView android:text="@string/title_income" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Addincome_Accountname"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:id="@+id/tv_Addincome_Amount"
        android:layout_below="@+id/tv_Addincome_Accountname"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_Addincome_Amount"
        android:layout_below="@+id/tv_Addincome_Amount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:id="@+id/tv_Addincome_Account"
        android:layout_below="@+id/et_Addincome_Amount"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/bt_Addincome_Account"
        android:layout_below="@+id/tv_Addincome_Account"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/tv_Addincome_Date"
        android:layout_below="@+id/bt_Addincome_Account"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Pick Date"
        android:id="@+id/bt_Addincome_Date_Pick"
        android:layout_below="@+id/tv_Addincome_Date"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/bt_Addincome_Save"
        android:layout_below="@+id/bt_Addincome_Date_Pick"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="saveData"
        />

</RelativeLayout>
